@@ -79,6 +79,8 @@ tasks.register<Test>("testRestSuite") {
     }
     jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
     jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.net=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED")
     beforeTest(closureOf<TestDescriptor> { logger.lifecycle("-> $this") })
     outputs.upToDateWhen { false }
     testLogging {
